@@ -72,6 +72,7 @@
 	define("CONDITION_OPERATOR_NOT_LIKE",	3);
 	define("CONDITION_OPERATOR_IN",		4);
 	define("CONDITION_OPERATOR_MORE_EQUAL",	5);
+	define("CONDITION_OPERATOR_LESS_EQUAL",	6);
 
 	define("HOST_STATUS_MONITORED",		0);
 	define("HOST_STATUS_NOT_MONITORED",	1);
